versions/v4.1.0/doxygen/html/globals_defs_o.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/doxygen/html/globals_defs_o.html
original_path: doxygen/html/globals_defs_o.html
---

| Logo | Zephyr API Documentation 4.1.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all macros with links to the files they belong to:

### - o -

- O\_ACCMODE : [fcntl.h](fcntl_8h.md#a4dc4d45e07d2abc899bcaf04b2846a87)
- O\_APPEND : [fcntl.h](fcntl_8h.md#ae036f789407d21f07b211552d67b3214)
- O\_CREAT : [fcntl.h](fcntl_8h.md#a1cf6b1de1fffedaa1d26b189e9a8d2cc)
- O\_EXCL : [fcntl.h](fcntl_8h.md#a9f5acfe79fafe14b6694447bd0e9f10b)
- O\_NONBLOCK : [fcntl.h](fcntl_8h.md#a39d33ce33804efd4d52606d59071c6d8)
- O\_RDONLY : [fcntl.h](fcntl_8h.md#a7a68c9ffaac7dbcd652225dd7c06a54b)
- O\_RDWR : [fcntl.h](fcntl_8h.md#abb0586253488ee61072b73557eeb873b)
- O\_TRUNC : [fcntl.h](fcntl_8h.md#ad1d67e453fb3031f40f8cd3403773813)
- O\_WRONLY : [fcntl.h](fcntl_8h.md#a11b644a8526139c4cc1850dac1271ced)
- OBSBUS0\_P0 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#adbfd549022c7a945371d2d5180d488ed)
- OBSBUS0\_P112 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aadee62a393b91033e41095727346cc88)
- OBSBUS0\_P16 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a2cfeac9755d9b17cef91970dab75fdfd)
- OBSBUS0\_P32 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ad28d4591e51ea1cdff065c03bfefcc3c)
- OBSBUS0\_P48 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4fac1541ce6af57cbf93c77f1a4bc992)
- OBSBUS0\_P64 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a7046ce33beecfb8727c857baa8ec72b5)
- OBSBUS0\_P80 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a8b3bda5935f620002b707dfe3fc43d67)
- OBSBUS0\_P96 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a80a8a9f4918f158e0fef07b9eb64ea21)
- OBSBUS10\_P10 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a2d270a862d5c76f63b73b104f9370a2e)
- OBSBUS10\_P106 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4309d6d3d8a6e6a21b69286a1ef7acc4)
- OBSBUS10\_P122 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#adda059280c2f53c16706821fec244b21)
- OBSBUS10\_P26 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a8e9e7fc1ba07004d0915b300e2cf8efb)
- OBSBUS10\_P42 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ab913e0fe787ff2c6a9483a437e0fa0c5)
- OBSBUS10\_P58 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a2d0f34dc3bf65650d7e82a622158e551)
- OBSBUS10\_P74 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a3bf2acee5564563d94e424ca119e8ddc)
- OBSBUS10\_P90 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a753f69a7807fd22c17becf9efcb95091)
- OBSBUS11\_P107 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a49b86305365ebe26e0d39f74e225b9f8)
- OBSBUS11\_P11 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a46f284c12934bd31286e1fa32ed9e30f)
- OBSBUS11\_P123 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aaefecf8c9b0c73241ea184511542a25e)
- OBSBUS11\_P27 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a5e3d8cb5fdd767c4657ab628a930a547)
- OBSBUS11\_P43 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac4e97552126e4b7862e234ac07e3194a)
- OBSBUS11\_P59 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aa1929a618c3f4373fd5a8eb621e81697)
- OBSBUS11\_P75 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac97fe090926d45f3225440ac08ceaf0d)
- OBSBUS11\_P91 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac46b789266d9702e649b32374d252f04)
- OBSBUS12\_P108 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a1c7a0d5b51002d848539c85f4b7a5194)
- OBSBUS12\_P12 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a8c23805d9ce7ac260560d7273a27bcf8)
- OBSBUS12\_P124 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a7b925c76ec1c64561103feb855a32245)
- OBSBUS12\_P28 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ab82b48ad1825299308445886b56ed22b)
- OBSBUS12\_P44 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac805c9137dc8c4abe8cf21f8af7d1fb1)
- OBSBUS12\_P60 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#acb91ece35c59b0089f282107812307fd)
- OBSBUS12\_P76 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aecda03e317007759a513adf403d67646)
- OBSBUS12\_P92 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a97e8d866ebe202069a46865303da4c6b)
- OBSBUS13\_P109 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a77f69ef04921cc3126c8fd6154163d54)
- OBSBUS13\_P125 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a1649abcd2e3a8156e8eb6e1a4dce3bdc)
- OBSBUS13\_P13 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a7464ef92fcda71c3ef718173a5170ef9)
- OBSBUS13\_P29 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a5f8ef644d94563044872bab54bd59e62)
- OBSBUS13\_P45 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ae8286cb032fcc68ff9ee312d7ac839fa)
- OBSBUS13\_P61 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac6f8e5a69355a29de1e8125dfc0b5bc0)
- OBSBUS13\_P77 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a8715730c82c93d1f675a4a598ba63eb3)
- OBSBUS13\_P93 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a00fe997cf76f4842b74ca239c362cf6a)
- OBSBUS14\_P110 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a3fe2e2e83eb50ea36b2f4ed9b6430122)
- OBSBUS14\_P126 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a7a9e4213af51b8097f92ea486ec995d9)
- OBSBUS14\_P14 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a0ec1384f9acdfedab8ee95078be3abcf)
- OBSBUS14\_P30 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a8c8d8d8d590462604d81a8eda4714dcd)
- OBSBUS14\_P46 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4204bbc003ee331aa4208d9adfd14d0d)
- OBSBUS14\_P62 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#abe74dfbe4d685e7867faf149543d7f95)
- OBSBUS14\_P78 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a279e5af6103ccf038765c3982cd1cacd)
- OBSBUS14\_P94 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a9ff7d5ecbe4a32b8d30031c880833bd8)
- OBSBUS15\_P111 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#adb39cabccc480340cd81cfd7bbfeb723)
- OBSBUS15\_P127 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aafee083e9c35046ad1075c5c069dec13)
- OBSBUS15\_P15 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a273a9f2211fdc7cfbf62698dc3c44c80)
- OBSBUS15\_P31 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a12bb593d871fdcd8ca681fb14c0dae08)
- OBSBUS15\_P47 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a70cb524641601aae5a49e45af2295a3d)
- OBSBUS15\_P63 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aa477eb0f144f44127342fe79876eb312)
- OBSBUS15\_P79 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a072360a1c54d1af1c4046d7af0fa9793)
- OBSBUS15\_P95 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aef31fb5f1595fe68bec72bcc78b94a8a)
- OBSBUS1\_P1 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4e9efe5ed8ce7a01d2c56a81d42b482e)
- OBSBUS1\_P113 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a8f78f738a7a8080d9b05ff52ab5fda5e)
- OBSBUS1\_P17 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aa657ca13684a441999e3d45893037f31)
- OBSBUS1\_P33 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a7b23495cdc7569782a6bcea9b05d1b1f)
- OBSBUS1\_P49 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a9e3d456cb4258379d0fb21d0330551a3)
- OBSBUS1\_P65 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ae32c8688bca5ee426871846ee754feee)
- OBSBUS1\_P81 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a6ea1025d519788d428f2c04a00e65571)
- OBSBUS1\_P97 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ad38d0b218eaaedbd9c878255f07a31bd)
- OBSBUS2\_P114 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a55e84bc1a41686c49794738bd80e0efb)
- OBSBUS2\_P18 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aa7598e1cf4105c96862ff2c9912f5468)
- OBSBUS2\_P2 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a90482534a21cc6ff8b40308e6295b296)
- OBSBUS2\_P34 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a0255f59820660cfbf6b00e0d72ec4de0)
- OBSBUS2\_P50 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a57bd2b14b2ea2d5a659eb460fde52832)
- OBSBUS2\_P66 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aca89e15806ac74473a750140e063a768)
- OBSBUS2\_P82 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a7e3f42512acdce4b95988393e3c0dd45)
- OBSBUS2\_P98 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4d971d146729a0542420753cad44fd29)
- OBSBUS3\_P115 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a488c2406b9a6c4473ca3786ec97e5810)
- OBSBUS3\_P19 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac950a0d57ead9b5a57a76bc68c516d95)
- OBSBUS3\_P3 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a24aa30cfa37200847e241fb3d872c3ba)
- OBSBUS3\_P35 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4f7fbc744f7889cee7bef1b38f4d070e)
- OBSBUS3\_P51 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4886f7addf80e5033f316ae75dac2716)
- OBSBUS3\_P67 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a81e49f6c74fd26278133b54130301c98)
- OBSBUS3\_P83 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#afb9a42fcf793d644a541995bc644ad67)
- OBSBUS3\_P99 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aa564e30369a60ba141e2a6bf77d41d7e)
- OBSBUS4\_P100 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a13f1adff3495879c572f519160a6ea5d)
- OBSBUS4\_P116 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ae50804e0df20140202f1d44235b2ec18)
- OBSBUS4\_P20 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a415b74c3f9d40868278d8378172b1d68)
- OBSBUS4\_P36 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a50acd2c92cccad4cee9ddb3638632bc9)
- OBSBUS4\_P4 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aef633955e81dca4d6ebfb9f7a098789f)
- OBSBUS4\_P52 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ab77156824b7b5e6c3a1d077f18a702bb)
- OBSBUS4\_P68 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a66e352fbe264a7ff8832be0f12dd8c47)
- OBSBUS4\_P84 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a9fbd5b572f01c8c432af528e449b6e80)
- OBSBUS5\_P101 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#adf194bba4fea1138b06905786db5cec3)
- OBSBUS5\_P117 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a34910ee56802a8938145d9a6befa3bb5)
- OBSBUS5\_P21 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aaf9c63c1756f5a2597b4fe3e6a7c8b3d)
- OBSBUS5\_P37 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac5ea679002c650a430ee4657e4196d9b)
- OBSBUS5\_P5 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac8300e420fce3bf25795df53cd2e9348)
- OBSBUS5\_P53 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aef8b55cb9f1bab911cd8b95e41121d15)
- OBSBUS5\_P69 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a502eecad3a6ae367a857f7c11d9056aa)
- OBSBUS5\_P85 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#acbc47bad7dfa118491ce64f06d8008eb)
- OBSBUS6\_P102 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a3094facd381a2e6cb4213b9a89cfc509)
- OBSBUS6\_P118 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a7d064c39647ce86941c589eb29e927bf)
- OBSBUS6\_P22 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a857869244419f625e694edf76ac8256e)
- OBSBUS6\_P38 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ad9f471a7abe120a40c875d1d9c6f258e)
- OBSBUS6\_P54 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a4a8eb44700f156a737d33749e5c2ace0)
- OBSBUS6\_P6 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ac7b99eca53b82adbb09ffd032179b198)
- OBSBUS6\_P70 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a213ad33569c9e4b5b885ebc32d2c6eb8)
- OBSBUS6\_P86 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a09910b22007c3fabe7cec24ba486c52f)
- OBSBUS7\_P103 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a6452ad42a5a7620093c30c47b5ff9c06)
- OBSBUS7\_P119 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ab91d5ef9bd20959272028ca6a8cf2793)
- OBSBUS7\_P23 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a6719ff7f6b60aa733a7250c1e53cf46f)
- OBSBUS7\_P39 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a662633fabc70c777fe91bed65808c4c6)
- OBSBUS7\_P55 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a50c5ec35134d0026560aaaa385d7187d)
- OBSBUS7\_P7 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a6a00216d761ecb9a4127476daa412ce5)
- OBSBUS7\_P71 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aa6124c105b0f3a3212153357f20372fd)
- OBSBUS7\_P87 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a089d5d74bcef41deeaf6bb9f7c2e5d19)
- OBSBUS8\_P104 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a36160355e284841b90e840d70376763a)
- OBSBUS8\_P120 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a6919e05a651ba3e0c99328aadee160df)
- OBSBUS8\_P24 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aa5288e590178498d56e2993e86809a87)
- OBSBUS8\_P40 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a62470a0912d3be6df66e11564b731bfb)
- OBSBUS8\_P56 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#acb43e66d36063e531a99be61d5c0581d)
- OBSBUS8\_P72 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a239f7846dcaf72a6023075cf8b0e2a4d)
- OBSBUS8\_P8 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a45a4bb0b3ede6c90f5d9b0a698fd02c2)
- OBSBUS8\_P88 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#adfe02ce3348e9f69e9ca7186ec9697e3)
- OBSBUS9\_P105 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a6b99ff82f6dbe1b1e59c717d455920ee)
- OBSBUS9\_P121 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ad737c518cbfa1dd508d0f5d6e1aa37a7)
- OBSBUS9\_P25 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#af463b723028bac12dd7e259e5e59ae07)
- OBSBUS9\_P41 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a56e25a84951a00958c81c3f2c89e161c)
- OBSBUS9\_P57 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a73074d9fbbd7340a50caf05827eb6d7c)
- OBSBUS9\_P73 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a61ae81253439e142027c2bf80052ff79)
- OBSBUS9\_P89 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a9e8a50ad70a9c3e4ee75bfbcb4928bb9)
- OBSBUS9\_P9 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a8d599c9c94f22138efa4e7933436d4ac)
- OCTOSPI1\_SEL : [stm32h5\_clock.h](stm32h5__clock_8h.md#a50fd0ec19b392357f55331cc031b34fd)
- OCTOSPI\_SEL : [stm32u5\_clock.h](stm32u5__clock_8h.md#a121f4f2f299d0ab56293512df1ac6b2c)
- ONE\_FRAME : [seagate\_legend\_b1414.h](seagate__legend__b1414_8h.md#a2359d4eb2386a3eef432e601e7726f90)
- ONOFF\_CLIENT\_EXTENSION\_POS : [onoff.h](group__resource__mgmt__onoff__apis.md#gad61d053ae4e9ee12efe8d37372a16c63)
- ONOFF\_FLAG\_ERROR : [onoff.h](group__resource__mgmt__onoff__apis.md#ga9ae0c3528254b10f5e1a9743aea234dd)
- ONOFF\_STATE\_ERROR : [onoff.h](group__resource__mgmt__onoff__apis.md#gac005a25d149568208a6fbaa2ceaa1ac6)
- ONOFF\_STATE\_MASK : [onoff.h](group__resource__mgmt__onoff__apis.md#ga0e06eafdf5021ce970027f20fc001acc)
- ONOFF\_STATE\_OFF : [onoff.h](group__resource__mgmt__onoff__apis.md#gab9e5380dce026a5dfea770f999400484)
- ONOFF\_STATE\_ON : [onoff.h](group__resource__mgmt__onoff__apis.md#ga7cd0fba52afba2e337ab7c830d3058d7)
- ONOFF\_STATE\_RESETTING : [onoff.h](group__resource__mgmt__onoff__apis.md#gacc0438b5c81c639e0035ada5caec940b)
- ONOFF\_STATE\_TO\_OFF : [onoff.h](group__resource__mgmt__onoff__apis.md#ga235a04122763f1a2cbb849c56df65d26)
- ONOFF\_STATE\_TO\_ON : [onoff.h](group__resource__mgmt__onoff__apis.md#gac4a0d8a7b501adb011aa1c4c4da3f2a3)
- ONOFF\_TRANSITIONS\_INITIALIZER : [onoff.h](group__resource__mgmt__onoff__apis.md#ga8c1171a844ef1d9d6541d342124492ff)
- OP\_LOADREG : [arch.h](mips_2arch_8h.md#a19279c7228621d3232e740aa69de27c3)
- OP\_STOREREG : [arch.h](mips_2arch_8h.md#ab32daf0cef581b53f3553876d4db2714)
- OPCG\_CLK\_P17 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#ae51f5bbea7713d91af701162275abef4)
- OPCG\_LOAD\_P10 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#aae654852343169b655a996c9245a514d)
- OPCG\_TRIG\_P4 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a241b7dbfcfc91ced94957ea1cbf2992d)
- OPT\_3D : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#gabf03e1cd7cb18b7c1daf243d4c1dde24)
- OPT\_CENTER : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga830647bc1b42665e27813a46a6a089b7)
- OPT\_CENTERX : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga65bf92a2956ffee68057ab90be032445)
- OPT\_CENTERY : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#gaa28880f2aa7b6d8a51518189ca08382f)
- OPT\_FLAT : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#gaa76b9296cd6f2eb4bec3d650b73e69cc)
- OPT\_MASK : [pinctrl-ra-common.h](pinctrl-ra-common_8h.md#af44b6097b3ff3bd26acb0dee9a571374)
- OPT\_MONO : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga2fab787f842bb9193c9df68cb44f93fd)
- OPT\_NOBACK : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga87b8705ac37fc69704f00cc2a9b8e69e)
- OPT\_NODL : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga37f793d8ac3af5f518d024727ce9f710)
- OPT\_NOHANDS : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#gaa9bc6e351e9fb0515c69f3cd32ad5621)
- OPT\_NOHM : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga1e7090a0dbcee600a5472f5fc4343824)
- OPT\_NOPOINTER : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga0eb8abce5677ca0e6948ec1a003958de)
- OPT\_NOSECS : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga190c29e3a00685c3f8c4906df37720ae)
- OPT\_NOTICKS : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#gaed772e3cf2529e698fa8e69ee73f91f9)
- OPT\_POS : [pinctrl-ra-common.h](pinctrl-ra-common_8h.md#a301c04edbd1a0282380fdaa5af14ad55)
- OPT\_RGB565 : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#ga53f763f1e5de09b5e51242df87af8fb8)
- OPT\_RIGHTX : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#gae0088375e797e08fa3e14dc3124c1e90)
- OPT\_SIGNED : [ft8xx\_reference\_api.h](group__ft8xx__reference__api.md#gae0fef45ae7ca3a45286a19a47bd46943)
- OS\_GET\_TIME : [timestamp.h](timestamp_8h.md#a1b4134f508183af47ef3deff07be4a54)
- OS\_MGMT\_ID\_BOOTLOADER\_INFO : [os\_mgmt.h](os__mgmt_8h.md#a142393f94135f1dd91b8cf098e01aa6b)
- OS\_MGMT\_ID\_CONS\_ECHO\_CTRL : [os\_mgmt.h](os__mgmt_8h.md#a0093a8df477e7114ffa195a022851cbe)
- OS\_MGMT\_ID\_DATETIME\_STR : [os\_mgmt.h](os__mgmt_8h.md#af4370119858111637ee80af735b0e50c)
- OS\_MGMT\_ID\_ECHO : [os\_mgmt.h](os__mgmt_8h.md#a24751ec5a8ba224238f484e2048f152a)
- OS\_MGMT\_ID\_INFO : [os\_mgmt.h](os__mgmt_8h.md#a0103b1f0d37106c5166b1793c7743513)
- OS\_MGMT\_ID\_MCUMGR\_PARAMS : [os\_mgmt.h](os__mgmt_8h.md#a6eb9918c2e6d1564fc362fe3dcdc63d5)
- OS\_MGMT\_ID\_MPSTAT : [os\_mgmt.h](os__mgmt_8h.md#aa2918e287d063fb2a82bd87d5c29aba4)
- OS\_MGMT\_ID\_RESET : [os\_mgmt.h](os__mgmt_8h.md#a4447fa2fa0c5f37713f7ef555174e814)
- OS\_MGMT\_ID\_TASKSTAT : [os\_mgmt.h](os__mgmt_8h.md#a067886d5d5d1d8979f93bab61fc2a670)
- OSDP\_CMD\_KEYSET\_KEY\_MAX\_LEN : [osdp.h](osdp_8h.md#a04a0aa00cbe34e1723be1a4763f63e94)
- OSDP\_CMD\_TEXT\_MAX\_LEN : [osdp.h](osdp_8h.md#acfd9e52e3ca23e6ef3d1cb55a0fa5714)
- OSDP\_EVENT\_MAX\_DATALEN : [osdp.h](osdp_8h.md#af531800483155468768b89d20c3377d6)
- OSPI\_DTR\_TRANSFER : [ospi.h](ospi_8h.md#adc6ece270c248515bc36b7e73b32fedd)
- OSPI\_DUAL\_MODE : [ospi.h](ospi_8h.md#a16b26e6d0f41ec784419f650580bab70)
- OSPI\_OPI\_MODE : [ospi.h](ospi_8h.md#a3a5249c447488edc0bd67e69ffbb2323)
- OSPI\_QUAD\_MODE : [ospi.h](ospi_8h.md#a9baa648178c8018dc3371df3ec62ad46)
- OSPI\_SEL : [stm32h7\_clock.h](stm32h7__clock_8h.md#a098cb5d65a4a2b4cd7da394289eb38ff), [stm32l4\_clock.h](stm32l4__clock_8h.md#a098cb5d65a4a2b4cd7da394289eb38ff)
- OSPI\_SPI\_MODE : [ospi.h](ospi_8h.md#aa05908cb55f8b2c2b075fa5fe63295d6)
- OSPI\_STR\_TRANSFER : [ospi.h](ospi_8h.md#a05dc6d0a9546bb2ddad1b519cf663a3b)
- OTGFS\_SEL : [stm32h7rs\_clock.h](stm32h7rs__clock_8h.md#a90c95e4ec769bc6c8e22384ad7b77473)
- OTGHS\_SEL : [stm32u5\_clock.h](stm32u5__clock_8h.md#a3b059f3ee4d562325d2c1371d39dc08a)
- OTGPHY1\_SEL : [stm32n6\_clock.h](stm32n6__clock_8h.md#a3a59519ef352041f5fc6b73847feff36)
- OTGPHY1CKREF\_SEL : [stm32n6\_clock.h](stm32n6__clock_8h.md#a0dfca2709116f9933488ac82b894ab75)
- OTGPHY2\_SEL : [stm32n6\_clock.h](stm32n6__clock_8h.md#a3378b1ba6ba842c341b02c8b3423794c)
- OTGPHY2CKREF\_SEL : [stm32n6\_clock.h](stm32n6__clock_8h.md#a462cc4388ed9cd167341e583aeb2b9e3)
- OTS\_OBJ\_ID\_DIR\_LIST : [ots.h](group__bt__ots.md#ga4a6a0b0a3c8d10f3668e61c9dee0e05e)
- OUTER\_SHAREABLE : [arm\_mpu\_v8.h](arm__mpu__v8_8h.md#a6d48175f63f47fcbe1fedbbdfcd56a85), [arm\_mpu.h](4_2cortex__r_2arm__mpu_8h.md#a6d48175f63f47fcbe1fedbbdfcd56a85)
- OUTER\_SHAREABLE\_Msk : [arm\_mpu\_v8.h](arm__mpu__v8_8h.md#aa4f924c424fc141ffa32a9b5c1180d56), [arm\_mpu.h](4_2cortex__r_2arm__mpu_8h.md#aa4f924c424fc141ffa32a9b5c1180d56)
- OUTPUT\_TERMINAL\_COMMUNICATION\_SPEAKER : [audio.h](dt-bindings_2usb_2audio_8h.md#ac34dbadad29f4bba29e3a214b2cb383d)
- OUTPUT\_TERMINAL\_DESKTOP\_SPEAKER : [audio.h](dt-bindings_2usb_2audio_8h.md#a49bc14fca4c3aff926a210807a114ae6)
- OUTPUT\_TERMINAL\_HEAD\_MOUNTED\_DISPLAY\_AUDIO : [audio.h](dt-bindings_2usb_2audio_8h.md#a6059461cfdd64db6201d1e0617376237)
- OUTPUT\_TERMINAL\_HEADPHONES : [audio.h](dt-bindings_2usb_2audio_8h.md#a4b9e4313786ee1d84902e6da1b05ace6)
- OUTPUT\_TERMINAL\_LOW\_FREQUENCY\_EFFECTS\_SPEAKER : [audio.h](dt-bindings_2usb_2audio_8h.md#a2ad2ed54af2d6a50eaac80026a15e622)
- OUTPUT\_TERMINAL\_ROOM\_SPEAKER : [audio.h](dt-bindings_2usb_2audio_8h.md#acdd32fe2e04543413eaa35517027ff31)
- OUTPUT\_TERMINAL\_SPEAKER : [audio.h](dt-bindings_2usb_2audio_8h.md#a5b36095777c3220b1cc81759b8144381)
- OUTPUT\_TERMINAL\_UNDEFINED : [audio.h](dt-bindings_2usb_2audio_8h.md#a394f4baecd7d0d7a1165746f81028369)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.1.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
